// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UrlBoxComponent should render correctly 1`] = `
<app-url-box>
  <div
    class="url-box"
  >
    <div
      class="url-box__method-wrapper"
    >
      <button
        class="url-box__button url-box__button--method"
        nz-dropdown=""
        nztrigger="click"
        track-id="http_verb"
        type="button"
        value="undefined"
      >
          
      </button>
      <nz-dropdown-menu>
        <ul
          nz-menu=""
        >
          
          <li
            nz-menu-item=""
            value="0"
          >
             POST 
          </li>
          
          <li
            nz-menu-item=""
            value="0"
          >
             GET 
          </li>
          
          <li
            nz-menu-item=""
            value="0"
          >
             PUT 
          </li>
          
          <li
            nz-menu-item=""
            value="0"
          >
             DELETE 
          </li>
          
        </ul>
      </nz-dropdown-menu>
    </div>
    <div
      class="url-box__input-container"
    >
      
      <app-fancy-input
        class="url-box__input"
        placeholder="Enter URL"
        track-id="set_url"
      />
    </div>
    <div
      class="url-box__input-actions"
    >
      <button
        class="url-box__button"
        nz-dropdown=""
        nztrigger="click"
        type="button"
      >
        <app-icon
          name="save"
        />
      </button>
      <nz-dropdown-menu>
        <ul
          nz-menu=""
        >
          
          <li
            nz-menu-item=""
          >
              
          </li>
          <li
            nz-menu-item=""
          >
              
          </li>
        </ul>
      </nz-dropdown-menu>
      <button
        class="url-box__button"
        track-id="reload_docs"
        type="button"
      >
        <app-icon
          name="refresh-ccw"
        />
      </button>
      <button
        class="url-box__button"
        track-id="show_docs"
        type="button"
      >
          
      </button>
    </div>
    <div
      class="send-request__wrapper"
    >
      
      <button
        class="app-button active-primary send-request__button"
        track-id="set_request"
      >
        
        
        <span>
          
        </span>
      </button>
      
      <nz-dropdown-menu>
        <ul
          nz-menu=""
        >
          
        </ul>
      </nz-dropdown-menu>
    </div>
  </div>
</app-url-box>
`;

exports[`UrlBoxComponent should render correctly with queryOperations > 1 1`] = `
<app-url-box>
  <div
    class="url-box"
  >
    <div
      class="url-box__method-wrapper"
    >
      <button
        class="url-box__button url-box__button--method"
        nz-dropdown=""
        nztrigger="click"
        track-id="http_verb"
        type="button"
        value="undefined"
      >
          
      </button>
      <nz-dropdown-menu>
        <ul
          nz-menu=""
        >
          
          <li
            nz-menu-item=""
            value="0"
          >
             POST 
          </li>
          
          <li
            nz-menu-item=""
            value="0"
          >
             GET 
          </li>
          
          <li
            nz-menu-item=""
            value="0"
          >
             PUT 
          </li>
          
          <li
            nz-menu-item=""
            value="0"
          >
             DELETE 
          </li>
          
        </ul>
      </nz-dropdown-menu>
    </div>
    <div
      class="url-box__input-container"
    >
      
      <app-fancy-input
        class="url-box__input"
        placeholder="Enter URL"
        track-id="set_url"
      />
    </div>
    <div
      class="url-box__input-actions"
    >
      <button
        class="url-box__button"
        nz-dropdown=""
        nztrigger="click"
        type="button"
      >
        <app-icon
          name="save"
        />
      </button>
      <nz-dropdown-menu>
        <ul
          nz-menu=""
        >
          
          <li
            nz-menu-item=""
          >
              
          </li>
          <li
            nz-menu-item=""
          >
              
          </li>
        </ul>
      </nz-dropdown-menu>
      <button
        class="url-box__button"
        track-id="reload_docs"
        type="button"
      >
        <app-icon
          name="refresh-ccw"
        />
      </button>
      <button
        class="url-box__button"
        track-id="show_docs"
        type="button"
      >
          
      </button>
    </div>
    <div
      class="send-request__wrapper"
    >
      
      
      <button
        class="app-button active-primary send-request__button"
        nz-dropdown=""
        nzplacement="bottomRight"
        nztrigger="click"
        track-id="send_request"
      >
        
        
        <span>
          
        </span>
        
        <app-icon
          name="chevron-down"
        />
      </button>
      
      <nz-dropdown-menu>
        <ul
          nz-menu=""
        >
          
          <li
            nz-menu-item=""
          >
             operation 1 
          </li>
          
          <li
            nz-menu-item=""
          >
             operation 2 
          </li>
          
        </ul>
      </nz-dropdown-menu>
    </div>
  </div>
</app-url-box>
`;
